--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 
 
-    <!-- <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script> -->
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 
     <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
